# FFT_Com

./: .gitignore  README.md  pyproject.toml  requirements.txt
comparisons/: README.md
docs/evidence/: fft_notebook_execution_summary_20260716.json  freqkv_dct_energy_probe_20260716.csv  freqkv_historical_artifact_inventory_20260717.csv  freqkv_real_kv_raw_20260717.csv  freqkv_real_kv_summary_20260717.json  freqkv_reassessment_raw_20260717.csv  freqkv_reassessment_summary_20260717.json  model_rotation_module_metrics_20260717.json  model_rotation_summary_20260717.json  order_test_weight_seed42.json  scalelogic_checkpoint_history_20260716.json  transform_potential_summary_20260716.json  transform_seed_sweep_20260716.json
docs/protocols/: legal_model_rotation_protocol.md  matched_comparison_protocol.md  transform_compression_protocol.md
docs/provenance/: cleanup_staging_20260716.tsv  freqkv_historical_artifacts_20260717.sha256  freqkv_real_kv_20260717.sha256  source_hashes_20260716.sha256  source_inventory_20260716.csv
docs/reports/: freqkv_reassessment_20260717.md  frequency_prototypes_audit_20260716.md  learnable_logic_mainline_20260716.md  model_rotation_study_20260717.md  (+2 more)
scripts/: benchmark_transform_latency.py  run_additional_rotation_experiments.sh  run_all_input_screen.sh  run_freqkv_real_kv_probe.py  run_freqkv_reassessment.py  run_model_rotation_eval.py  run_model_rotation_formal.sh  run_segment_replicates.sh  run_transform_potential.py  summarize_model_rotation.py  summarize_seed_sweep.py
src/fft_com/: data.py  (+9 more)
tests/: test_core.py  test_torch_rotation.py
(+15 files in other folders)
