[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fft-com"
version = "0.1.0"
description = "Reproducible transform-aware matrix compression probes"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "safetensors>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
