[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fft-com"
version = "0.1.0"
description = "Reproducible transform-aware matrix compression probes"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "safetensors>=0.4",
]

[project.optional-dependencies]
model-eval = [
  "accelerate>=1.0",
  "datasets>=2.15",
  "jinja2>=3.1",
  "scipy>=1.10",
  "sentencepiece>=0.2",
  "torch>=2.3",
  "transformers>=4.57.1,<5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
